Fixed issues with Gschools and Ub321337 themes displaying collapsed news posts after earlier update

--- a/styles/Ub321337/news/news.css
+++ b/styles/Ub321337/news/news.css
@@ -15,6 +15,8 @@
 	border-color: #008800;
 	border-width: 0px;
 	border-bottom-width: 1px;
+	padding-bottom:2px;
+	padding-top:2px;
 }
 .newsgroups {
 	font-style: italic;
