--- a/styles/gschools/news/news.css
+++ b/styles/gschools/news/news.css
@@ -25,6 +25,7 @@
 	font-family:Arial, sans-serif;
 /*	font-weight:bold;*/
 	line-height: 1em;
+	padding-bottom:0.4em;
 }
 
 .newsresponsebar {
